# wagtail-tox-gha-test-20231012

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  testmanage.py  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: test.yml
wagtail_tox_gha_test_20231012/: __init__.py  apps.py  wagtail_hooks.py
wagtail_tox_gha_test_20231012/test/: __init__.py  apps.py  settings.py
